# BU_ENGME700_KeenanWood_A2

./: .coverage  README.md  pyproject.toml
.github/workflows/: main.yml
Assignment 1/: .coverage  README-to_run.txt  bisect_weighted.py  bisect_weighted_documentation.txt  bisection_weighted.py  pyproject.toml
Assignment 1/Bisection/: bisect_weighted_documentation.txt
Assignment 1/Bisection/src/: bisect_weighted.py
Assignment 1/Bisection/src/bisect_weighted.egg-info/: SOURCES.txt  requires.txt
Assignment 1/Bisection/tests/: test_bisect_weighted.py
Assignment 1/NewtonsMethod/src/: zerosetnewton.py
Assignment 1/src/: examples.py
Assignment 1/src/bisect_weighted.egg-info/: PKG-INFO  top_level.txt
Assignment 1/tests/: test_bisect_weighted.py
BisectionMethod/: bisect_weighted_documentation.txt
BisectionMethod/src/: bisect_weighted.py  examples.py
BisectionMethod/tests/: test_bisect_weighted.py
Direct_Stiffness/: .coverage  pyproject.toml  tutorial_structural_matrix.ipynb
Direct_Stiffness/src/: StructuralFrame.py  StructuralFrame_2.py  StructuralFrame_3.py  example_problems_script.py
Direct_Stiffness/tests/: test_StructuralFrame_2.py  test_StructuralFrame_3.py
ElastoPlastic/: .coverage  pyproject.toml  pytest.ini  tutorial_elastoplastic.ipynb
ElastoPlastic/src/: elastoplastic.py  elastoplatic.py
ElastoPlastic/src/ElastoPlastic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ElastoPlastic/tests/: test_elastoplastic.py
NewtonMethod/: .coverage  pyproject.toml
NewtonMethod/src/: newtonmethod.py
NewtonMethod/src/NewtonMethod.egg-info/: PKG-INFO  SOURCES.txt
NewtonMethod/tests/: test_newtonmethod.py  test_parametricfunction.py
Part_1/: pyproject.toml
Part_1/src/: StructuralFrame_2.py  structural_matrix.py
Part_1/tests/: test_StructuralFrame_2.py  test_frame.py
Part_2/: bisect_weighted_documentation.txt  pyproject.toml
Part_2/src/: bisect_weighted.py  examples.py
Part_2/tests/: test_bisect_weighted.py
src/: newtonmethod.py  parametricfunction.py  zerosetnewton.py
src/NewtonMethod.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_parametricfunction.py  test_zerosetnewton.py
