[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NewtonMethod"
version = "0.0.0"
authors = [
  { name="Keenan Wood", email="keenanw7@bu.edu" },
]
description = "Bracketed Newton Method - N-dimensional with quadtratic fit"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==1.26.4",
    "sympy",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "scipy==1.12.0"
]

[project.urls]
"Homepage" = "https://github.com/Keenan-Wood/BU_ENGME700_KeenanWood_A1_NewtonMethod"
"Bug Tracker" = "https://github.com/Keenan-Wood/BU_ENGME700_KeenanWood_A1_NewtonMethod/issues"