[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bisect_weighted"
version = "0.0.0"
authors = [
  { name="Keenan Wood", email="keenanw7@bu.edu" },
]
description = "bisectionmethod with linear function approximation"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy==1.26.4",
    "pytest==7.1.2",
    "pytest-cov==3.0.0"
]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ["src"]