[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = "src"

[project]
name = "Direct_Stiffness"
version = "0.0.0"
authors = [
  { name="Keenan Wood", email="keenanw7@bu.edu" },
]
description = "Direct Stiffness Method Solver"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "matplotlib==3.10.0",
    "numpy==2.0.0",
    "sympy",
    "pytest==7.1.2",
    "pytest-cov==3.0.0",
    "scipy==1.15.2",
    "texttable"
]

[project.urls]
"Homepage" = "https://github.com/Keenan-Wood/BU_ENGME700_KeenanWood_A2"
"Bug Tracker" = "https://github.com/Keenan-Wood/BU_ENGME700_KeenanWood_A2/issues"
